ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: caption-craft-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: caption.craft
    http:
      paths:
      # - path: /captioncraft(/|$)(.*)
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: caption-craft-frontend-service
            port:
              number: 80
  - host: caption.craft.backend
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: caption-craft-backend-service
            port:
              number: 3000
